[package]
name = "simics-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simics-api-sys = { workspace = true }
raw-cstr = { workspace = true }
anyhow.workspace = true
num-derive = "0.3.3"
num-traits = "0.2.15"
num = "0.4.0"
simics-api-macro = { workspace = true, optional = true }
const-str = "0.5.4"
paste = "1.0.12"
clap = { version = "4.3.0", features = ["derive"] }
tracing = "0.1.37"

[features]
# Derive is provided by default to provide #[derive(Module)] and #[module]
default = ["derive"]

# Provide #[derive(Module)] and #[module]
derive = ["simics-api-macro"]

# When simics-api-sys is updated to include a new SIMICS version, add a new entry here
# manually as well
"6.0.28" = ["simics-api-sys/6.0.28"]
"6.0.31" = ["simics-api-sys/6.0.31"]
"6.0.33" = ["simics-api-sys/6.0.33"]
"6.0.34" = ["simics-api-sys/6.0.34"]
"6.0.35" = ["simics-api-sys/6.0.35"]
"6.0.36" = ["simics-api-sys/6.0.36"]
"6.0.38" = ["simics-api-sys/6.0.38"]
"6.0.39" = ["simics-api-sys/6.0.39"]
"6.0.40" = ["simics-api-sys/6.0.40"]
"6.0.41" = ["simics-api-sys/6.0.41"]
"6.0.42" = ["simics-api-sys/6.0.42"]
"6.0.43" = ["simics-api-sys/6.0.43"]
"6.0.44" = ["simics-api-sys/6.0.44"]
"6.0.45" = ["simics-api-sys/6.0.45"]
"6.0.46" = ["simics-api-sys/6.0.46"]
"6.0.47" = ["simics-api-sys/6.0.47"]
"6.0.48" = ["simics-api-sys/6.0.48"]
"6.0.49" = ["simics-api-sys/6.0.49"]
"6.0.50" = ["simics-api-sys/6.0.50"]
"6.0.51" = ["simics-api-sys/6.0.51"]
"6.0.52" = ["simics-api-sys/6.0.52"]
"6.0.53" = ["simics-api-sys/6.0.53"]
"6.0.54" = ["simics-api-sys/6.0.54"]
"6.0.55" = ["simics-api-sys/6.0.55"]
"6.0.56" = ["simics-api-sys/6.0.56"]
"6.0.57" = ["simics-api-sys/6.0.57"]
"6.0.58" = ["simics-api-sys/6.0.58"]
"6.0.59" = ["simics-api-sys/6.0.59"]
"6.0.60" = ["simics-api-sys/6.0.60"]
"6.0.61" = ["simics-api-sys/6.0.61"]
"6.0.62" = ["simics-api-sys/6.0.62"]
"6.0.63" = ["simics-api-sys/6.0.63"]
"6.0.64" = ["simics-api-sys/6.0.64"]
"6.0.65" = ["simics-api-sys/6.0.65"]
"6.0.66" = ["simics-api-sys/6.0.66"]
"6.0.67" = ["simics-api-sys/6.0.67"]
"6.0.68" = ["simics-api-sys/6.0.68"]
"6.0.69" = ["simics-api-sys/6.0.69"]
"6.0.70" = ["simics-api-sys/6.0.70"]
"6.0.71" = ["simics-api-sys/6.0.71"]
"6.0.72" = ["simics-api-sys/6.0.72"]
"6.0.73" = ["simics-api-sys/6.0.73"]
"6.0.74" = ["simics-api-sys/6.0.74"]
"6.0.75" = ["simics-api-sys/6.0.75"]
"6.0.76" = ["simics-api-sys/6.0.76"]
"6.0.77" = ["simics-api-sys/6.0.77"]
"6.0.78" = ["simics-api-sys/6.0.78"]
"6.0.79" = ["simics-api-sys/6.0.79"]
"6.0.80" = ["simics-api-sys/6.0.80"]
"6.0.81" = ["simics-api-sys/6.0.81"]
"6.0.82" = ["simics-api-sys/6.0.82"]
"6.0.83" = ["simics-api-sys/6.0.83"]
"6.0.84" = ["simics-api-sys/6.0.84"]
"6.0.85" = ["simics-api-sys/6.0.85"]
"6.0.86" = ["simics-api-sys/6.0.86"]
"6.0.87" = ["simics-api-sys/6.0.87"]
"6.0.88" = ["simics-api-sys/6.0.88"]
"6.0.89" = ["simics-api-sys/6.0.89"]
"6.0.90" = ["simics-api-sys/6.0.90"]
"6.0.91" = ["simics-api-sys/6.0.91"]
"6.0.92" = ["simics-api-sys/6.0.92"]
"6.0.93" = ["simics-api-sys/6.0.93"]
"6.0.94" = ["simics-api-sys/6.0.94"]
"6.0.95" = ["simics-api-sys/6.0.95"]
"6.0.96" = ["simics-api-sys/6.0.96"]
"6.0.97" = ["simics-api-sys/6.0.97"]
"6.0.98" = ["simics-api-sys/6.0.98"]
"6.0.99" = ["simics-api-sys/6.0.99"]
"6.0.100" = ["simics-api-sys/6.0.100"]
"6.0.101" = ["simics-api-sys/6.0.101"]
"6.0.102" = ["simics-api-sys/6.0.102"]
"6.0.103" = ["simics-api-sys/6.0.103"]
"6.0.104" = ["simics-api-sys/6.0.104"]
"6.0.105" = ["simics-api-sys/6.0.105"]
"6.0.106" = ["simics-api-sys/6.0.106"]
"6.0.107" = ["simics-api-sys/6.0.107"]
"6.0.108" = ["simics-api-sys/6.0.108"]
"6.0.109" = ["simics-api-sys/6.0.109"]
"6.0.110" = ["simics-api-sys/6.0.110"]
"6.0.111" = ["simics-api-sys/6.0.111"]
"6.0.112" = ["simics-api-sys/6.0.112"]
"6.0.113" = ["simics-api-sys/6.0.113"]
"6.0.114" = ["simics-api-sys/6.0.114"]
"6.0.115" = ["simics-api-sys/6.0.115"]
"6.0.116" = ["simics-api-sys/6.0.116"]
"6.0.117" = ["simics-api-sys/6.0.117"]
"6.0.118" = ["simics-api-sys/6.0.118"]
"6.0.119" = ["simics-api-sys/6.0.119"]
"6.0.120" = ["simics-api-sys/6.0.120"]
"6.0.121" = ["simics-api-sys/6.0.121"]
"6.0.122" = ["simics-api-sys/6.0.122"]
"6.0.123" = ["simics-api-sys/6.0.123"]
"6.0.124" = ["simics-api-sys/6.0.124"]
"6.0.125" = ["simics-api-sys/6.0.125"]
"6.0.126" = ["simics-api-sys/6.0.126"]
"6.0.127" = ["simics-api-sys/6.0.127"]
"6.0.128" = ["simics-api-sys/6.0.128"]
"6.0.129" = ["simics-api-sys/6.0.129"]
"6.0.130" = ["simics-api-sys/6.0.130"]
"6.0.131" = ["simics-api-sys/6.0.131"]
"6.0.132" = ["simics-api-sys/6.0.132"]
"6.0.133" = ["simics-api-sys/6.0.133"]
"6.0.134" = ["simics-api-sys/6.0.134"]
"6.0.135" = ["simics-api-sys/6.0.135"]
"6.0.136" = ["simics-api-sys/6.0.136"]
"6.0.137" = ["simics-api-sys/6.0.137"]
"6.0.138" = ["simics-api-sys/6.0.138"]
"6.0.139" = ["simics-api-sys/6.0.139"]
"6.0.140" = ["simics-api-sys/6.0.140"]
"6.0.141" = ["simics-api-sys/6.0.141"]
"6.0.142" = ["simics-api-sys/6.0.142"]
"6.0.143" = ["simics-api-sys/6.0.143"]
"6.0.144" = ["simics-api-sys/6.0.144"]
"6.0.145" = ["simics-api-sys/6.0.145"]
"6.0.146" = ["simics-api-sys/6.0.146"]
"6.0.147" = ["simics-api-sys/6.0.147"]
"6.0.148" = ["simics-api-sys/6.0.148"]
"6.0.149" = ["simics-api-sys/6.0.149"]
"6.0.150" = ["simics-api-sys/6.0.150"]
"6.0.151" = ["simics-api-sys/6.0.151"]
"6.0.152" = ["simics-api-sys/6.0.152"]
"6.0.153" = ["simics-api-sys/6.0.153"]
"6.0.154" = ["simics-api-sys/6.0.154"]
"6.0.155" = ["simics-api-sys/6.0.155"]
"6.0.156" = ["simics-api-sys/6.0.156"]
"6.0.157" = ["simics-api-sys/6.0.157"]
"6.0.158" = ["simics-api-sys/6.0.158"]
"6.0.159" = ["simics-api-sys/6.0.159"]
"6.0.160" = ["simics-api-sys/6.0.160"]
"6.0.161" = ["simics-api-sys/6.0.161"]
"6.0.162" = ["simics-api-sys/6.0.162"]
"6.0.163" = ["simics-api-sys/6.0.163"]
"6.0.164" = ["simics-api-sys/6.0.164"]
"6.0.165" = ["simics-api-sys/6.0.165"]
"6.0.166" = ["simics-api-sys/6.0.166"]
