# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simics-api-sys = { workspace = true }
raw-cstr = { workspace = true }
anyhow.workspace = true
num-derive = "0.3.3"
num-traits = "0.2.15"
num = "0.4.0"
simics-api-macro = { workspace = true, optional = true }
const-str = "0.5.4"
paste = "1.0.12"
clap = { version = "4.3.0", features = ["derive"] }
tracing = "0.1.37"

[features]
# Derive is provided by default to provide #[derive(Module)] and #[module]
default = ["derive"]

# Provide #[derive(Module)] and #[module]
derive = ["simics-api-macro"]

# When simics-api-sys is updated to include a new SIMICS version, add a new entry here
# manually as well
"6.0.163" = ["simics-api-sys/6.0.163"]
"6.0.164" = ["simics-api-sys/6.0.164"]
"6.0.165" = ["simics-api-sys/6.0.165"]
"6.0.166" = ["simics-api-sys/6.0.166"]
"6.0.167" = ["simics-api-sys/6.0.167"]
"6.0.168" = ["simics-api-sys/6.0.168"]
