[package]
name = "simics-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.0"
simics = { workspace = true, features = ["link"] }
simics-api.workspace = true

[[bin]]
name = "simics-cli-6-0-28"
required-features = ["6.0.28"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-31"
required-features = ["6.0.31"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-33"
required-features = ["6.0.33"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-34"
required-features = ["6.0.34"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-35"
required-features = ["6.0.35"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-36"
required-features = ["6.0.36"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-38"
required-features = ["6.0.38"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-39"
required-features = ["6.0.39"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-40"
required-features = ["6.0.40"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-41"
required-features = ["6.0.41"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-42"
required-features = ["6.0.42"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-43"
required-features = ["6.0.43"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-44"
required-features = ["6.0.44"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-45"
required-features = ["6.0.45"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-46"
required-features = ["6.0.46"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-47"
required-features = ["6.0.47"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-48"
required-features = ["6.0.48"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-49"
required-features = ["6.0.49"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-50"
required-features = ["6.0.50"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-51"
required-features = ["6.0.51"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-52"
required-features = ["6.0.52"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-53"
required-features = ["6.0.53"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-54"
required-features = ["6.0.54"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-55"
required-features = ["6.0.55"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-56"
required-features = ["6.0.56"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-57"
required-features = ["6.0.57"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-58"
required-features = ["6.0.58"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-59"
required-features = ["6.0.59"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-60"
required-features = ["6.0.60"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-61"
required-features = ["6.0.61"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-62"
required-features = ["6.0.62"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-63"
required-features = ["6.0.63"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-64"
required-features = ["6.0.64"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-65"
required-features = ["6.0.65"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-66"
required-features = ["6.0.66"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-67"
required-features = ["6.0.67"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-68"
required-features = ["6.0.68"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-69"
required-features = ["6.0.69"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-70"
required-features = ["6.0.70"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-71"
required-features = ["6.0.71"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-72"
required-features = ["6.0.72"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-73"
required-features = ["6.0.73"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-74"
required-features = ["6.0.74"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-75"
required-features = ["6.0.75"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-76"
required-features = ["6.0.76"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-77"
required-features = ["6.0.77"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-78"
required-features = ["6.0.78"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-79"
required-features = ["6.0.79"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-80"
required-features = ["6.0.80"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-81"
required-features = ["6.0.81"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-82"
required-features = ["6.0.82"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-83"
required-features = ["6.0.83"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-84"
required-features = ["6.0.84"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-85"
required-features = ["6.0.85"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-86"
required-features = ["6.0.86"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-87"
required-features = ["6.0.87"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-88"
required-features = ["6.0.88"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-89"
required-features = ["6.0.89"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-90"
required-features = ["6.0.90"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-91"
required-features = ["6.0.91"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-92"
required-features = ["6.0.92"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-93"
required-features = ["6.0.93"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-94"
required-features = ["6.0.94"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-95"
required-features = ["6.0.95"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-96"
required-features = ["6.0.96"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-97"
required-features = ["6.0.97"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-98"
required-features = ["6.0.98"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-99"
required-features = ["6.0.99"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-100"
required-features = ["6.0.100"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-101"
required-features = ["6.0.101"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-102"
required-features = ["6.0.102"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-103"
required-features = ["6.0.103"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-104"
required-features = ["6.0.104"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-105"
required-features = ["6.0.105"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-106"
required-features = ["6.0.106"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-107"
required-features = ["6.0.107"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-108"
required-features = ["6.0.108"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-109"
required-features = ["6.0.109"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-110"
required-features = ["6.0.110"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-111"
required-features = ["6.0.111"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-112"
required-features = ["6.0.112"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-113"
required-features = ["6.0.113"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-114"
required-features = ["6.0.114"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-115"
required-features = ["6.0.115"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-116"
required-features = ["6.0.116"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-117"
required-features = ["6.0.117"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-118"
required-features = ["6.0.118"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-119"
required-features = ["6.0.119"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-120"
required-features = ["6.0.120"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-121"
required-features = ["6.0.121"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-122"
required-features = ["6.0.122"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-123"
required-features = ["6.0.123"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-124"
required-features = ["6.0.124"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-125"
required-features = ["6.0.125"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-126"
required-features = ["6.0.126"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-127"
required-features = ["6.0.127"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-128"
required-features = ["6.0.128"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-129"
required-features = ["6.0.129"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-130"
required-features = ["6.0.130"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-131"
required-features = ["6.0.131"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-132"
required-features = ["6.0.132"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-133"
required-features = ["6.0.133"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-134"
required-features = ["6.0.134"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-135"
required-features = ["6.0.135"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-136"
required-features = ["6.0.136"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-137"
required-features = ["6.0.137"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-138"
required-features = ["6.0.138"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-139"
required-features = ["6.0.139"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-140"
required-features = ["6.0.140"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-141"
required-features = ["6.0.141"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-142"
required-features = ["6.0.142"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-143"
required-features = ["6.0.143"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-144"
required-features = ["6.0.144"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-145"
required-features = ["6.0.145"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-146"
required-features = ["6.0.146"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-147"
required-features = ["6.0.147"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-148"
required-features = ["6.0.148"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-149"
required-features = ["6.0.149"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-150"
required-features = ["6.0.150"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-151"
required-features = ["6.0.151"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-152"
required-features = ["6.0.152"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-153"
required-features = ["6.0.153"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-154"
required-features = ["6.0.154"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-155"
required-features = ["6.0.155"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-156"
required-features = ["6.0.156"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-157"
required-features = ["6.0.157"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-158"
required-features = ["6.0.158"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-159"
required-features = ["6.0.159"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-160"
required-features = ["6.0.160"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-161"
required-features = ["6.0.161"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-162"
required-features = ["6.0.162"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-163"
required-features = ["6.0.163"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-164"
required-features = ["6.0.164"]
path = "src/bin/simics.rs"

[[bin]]
name = "simics-cli-6-0-165"
required-features = ["6.0.165"]
path = "src/bin/simics.rs"

[features]
"6.0.28" = ["simics-api/6.0.28", "simics/6.0.28"]
"6.0.31" = ["simics-api/6.0.31", "simics/6.0.31"]
"6.0.33" = ["simics-api/6.0.33", "simics/6.0.33"]
"6.0.34" = ["simics-api/6.0.34", "simics/6.0.34"]
"6.0.35" = ["simics-api/6.0.35", "simics/6.0.35"]
"6.0.36" = ["simics-api/6.0.36", "simics/6.0.36"]
"6.0.38" = ["simics-api/6.0.38", "simics/6.0.38"]
"6.0.39" = ["simics-api/6.0.39", "simics/6.0.39"]
"6.0.40" = ["simics-api/6.0.40", "simics/6.0.40"]
"6.0.41" = ["simics-api/6.0.41", "simics/6.0.41"]
"6.0.42" = ["simics-api/6.0.42", "simics/6.0.42"]
"6.0.43" = ["simics-api/6.0.43", "simics/6.0.43"]
"6.0.44" = ["simics-api/6.0.44", "simics/6.0.44"]
"6.0.45" = ["simics-api/6.0.45", "simics/6.0.45"]
"6.0.46" = ["simics-api/6.0.46", "simics/6.0.46"]
"6.0.47" = ["simics-api/6.0.47", "simics/6.0.47"]
"6.0.48" = ["simics-api/6.0.48", "simics/6.0.48"]
"6.0.49" = ["simics-api/6.0.49", "simics/6.0.49"]
"6.0.50" = ["simics-api/6.0.50", "simics/6.0.50"]
"6.0.51" = ["simics-api/6.0.51", "simics/6.0.51"]
"6.0.52" = ["simics-api/6.0.52", "simics/6.0.52"]
"6.0.53" = ["simics-api/6.0.53", "simics/6.0.53"]
"6.0.54" = ["simics-api/6.0.54", "simics/6.0.54"]
"6.0.55" = ["simics-api/6.0.55", "simics/6.0.55"]
"6.0.56" = ["simics-api/6.0.56", "simics/6.0.56"]
"6.0.57" = ["simics-api/6.0.57", "simics/6.0.57"]
"6.0.58" = ["simics-api/6.0.58", "simics/6.0.58"]
"6.0.59" = ["simics-api/6.0.59", "simics/6.0.59"]
"6.0.60" = ["simics-api/6.0.60", "simics/6.0.60"]
"6.0.61" = ["simics-api/6.0.61", "simics/6.0.61"]
"6.0.62" = ["simics-api/6.0.62", "simics/6.0.62"]
"6.0.63" = ["simics-api/6.0.63", "simics/6.0.63"]
"6.0.64" = ["simics-api/6.0.64", "simics/6.0.64"]
"6.0.65" = ["simics-api/6.0.65", "simics/6.0.65"]
"6.0.66" = ["simics-api/6.0.66", "simics/6.0.66"]
"6.0.67" = ["simics-api/6.0.67", "simics/6.0.67"]
"6.0.68" = ["simics-api/6.0.68", "simics/6.0.68"]
"6.0.69" = ["simics-api/6.0.69", "simics/6.0.69"]
"6.0.70" = ["simics-api/6.0.70", "simics/6.0.70"]
"6.0.71" = ["simics-api/6.0.71", "simics/6.0.71"]
"6.0.72" = ["simics-api/6.0.72", "simics/6.0.72"]
"6.0.73" = ["simics-api/6.0.73", "simics/6.0.73"]
"6.0.74" = ["simics-api/6.0.74", "simics/6.0.74"]
"6.0.75" = ["simics-api/6.0.75", "simics/6.0.75"]
"6.0.76" = ["simics-api/6.0.76", "simics/6.0.76"]
"6.0.77" = ["simics-api/6.0.77", "simics/6.0.77"]
"6.0.78" = ["simics-api/6.0.78", "simics/6.0.78"]
"6.0.79" = ["simics-api/6.0.79", "simics/6.0.79"]
"6.0.80" = ["simics-api/6.0.80", "simics/6.0.80"]
"6.0.81" = ["simics-api/6.0.81", "simics/6.0.81"]
"6.0.82" = ["simics-api/6.0.82", "simics/6.0.82"]
"6.0.83" = ["simics-api/6.0.83", "simics/6.0.83"]
"6.0.84" = ["simics-api/6.0.84", "simics/6.0.84"]
"6.0.85" = ["simics-api/6.0.85", "simics/6.0.85"]
"6.0.86" = ["simics-api/6.0.86", "simics/6.0.86"]
"6.0.87" = ["simics-api/6.0.87", "simics/6.0.87"]
"6.0.88" = ["simics-api/6.0.88", "simics/6.0.88"]
"6.0.89" = ["simics-api/6.0.89", "simics/6.0.89"]
"6.0.90" = ["simics-api/6.0.90", "simics/6.0.90"]
"6.0.91" = ["simics-api/6.0.91", "simics/6.0.91"]
"6.0.92" = ["simics-api/6.0.92", "simics/6.0.92"]
"6.0.93" = ["simics-api/6.0.93", "simics/6.0.93"]
"6.0.94" = ["simics-api/6.0.94", "simics/6.0.94"]
"6.0.95" = ["simics-api/6.0.95", "simics/6.0.95"]
"6.0.96" = ["simics-api/6.0.96", "simics/6.0.96"]
"6.0.97" = ["simics-api/6.0.97", "simics/6.0.97"]
"6.0.98" = ["simics-api/6.0.98", "simics/6.0.98"]
"6.0.99" = ["simics-api/6.0.99", "simics/6.0.99"]
"6.0.100" = ["simics-api/6.0.100", "simics/6.0.100"]
"6.0.101" = ["simics-api/6.0.101", "simics/6.0.101"]
"6.0.102" = ["simics-api/6.0.102", "simics/6.0.102"]
"6.0.103" = ["simics-api/6.0.103", "simics/6.0.103"]
"6.0.104" = ["simics-api/6.0.104", "simics/6.0.104"]
"6.0.105" = ["simics-api/6.0.105", "simics/6.0.105"]
"6.0.106" = ["simics-api/6.0.106", "simics/6.0.106"]
"6.0.107" = ["simics-api/6.0.107", "simics/6.0.107"]
"6.0.108" = ["simics-api/6.0.108", "simics/6.0.108"]
"6.0.109" = ["simics-api/6.0.109", "simics/6.0.109"]
"6.0.110" = ["simics-api/6.0.110", "simics/6.0.110"]
"6.0.111" = ["simics-api/6.0.111", "simics/6.0.111"]
"6.0.112" = ["simics-api/6.0.112", "simics/6.0.112"]
"6.0.113" = ["simics-api/6.0.113", "simics/6.0.113"]
"6.0.114" = ["simics-api/6.0.114", "simics/6.0.114"]
"6.0.115" = ["simics-api/6.0.115", "simics/6.0.115"]
"6.0.116" = ["simics-api/6.0.116", "simics/6.0.116"]
"6.0.117" = ["simics-api/6.0.117", "simics/6.0.117"]
"6.0.118" = ["simics-api/6.0.118", "simics/6.0.118"]
"6.0.119" = ["simics-api/6.0.119", "simics/6.0.119"]
"6.0.120" = ["simics-api/6.0.120", "simics/6.0.120"]
"6.0.121" = ["simics-api/6.0.121", "simics/6.0.121"]
"6.0.122" = ["simics-api/6.0.122", "simics/6.0.122"]
"6.0.123" = ["simics-api/6.0.123", "simics/6.0.123"]
"6.0.124" = ["simics-api/6.0.124", "simics/6.0.124"]
"6.0.125" = ["simics-api/6.0.125", "simics/6.0.125"]
"6.0.126" = ["simics-api/6.0.126", "simics/6.0.126"]
"6.0.127" = ["simics-api/6.0.127", "simics/6.0.127"]
"6.0.128" = ["simics-api/6.0.128", "simics/6.0.128"]
"6.0.129" = ["simics-api/6.0.129", "simics/6.0.129"]
"6.0.130" = ["simics-api/6.0.130", "simics/6.0.130"]
"6.0.131" = ["simics-api/6.0.131", "simics/6.0.131"]
"6.0.132" = ["simics-api/6.0.132", "simics/6.0.132"]
"6.0.133" = ["simics-api/6.0.133", "simics/6.0.133"]
"6.0.134" = ["simics-api/6.0.134", "simics/6.0.134"]
"6.0.135" = ["simics-api/6.0.135", "simics/6.0.135"]
"6.0.136" = ["simics-api/6.0.136", "simics/6.0.136"]
"6.0.137" = ["simics-api/6.0.137", "simics/6.0.137"]
"6.0.138" = ["simics-api/6.0.138", "simics/6.0.138"]
"6.0.139" = ["simics-api/6.0.139", "simics/6.0.139"]
"6.0.140" = ["simics-api/6.0.140", "simics/6.0.140"]
"6.0.141" = ["simics-api/6.0.141", "simics/6.0.141"]
"6.0.142" = ["simics-api/6.0.142", "simics/6.0.142"]
"6.0.143" = ["simics-api/6.0.143", "simics/6.0.143"]
"6.0.144" = ["simics-api/6.0.144", "simics/6.0.144"]
"6.0.145" = ["simics-api/6.0.145", "simics/6.0.145"]
"6.0.146" = ["simics-api/6.0.146", "simics/6.0.146"]
"6.0.147" = ["simics-api/6.0.147", "simics/6.0.147"]
"6.0.148" = ["simics-api/6.0.148", "simics/6.0.148"]
"6.0.149" = ["simics-api/6.0.149", "simics/6.0.149"]
"6.0.150" = ["simics-api/6.0.150", "simics/6.0.150"]
"6.0.151" = ["simics-api/6.0.151", "simics/6.0.151"]
"6.0.152" = ["simics-api/6.0.152", "simics/6.0.152"]
"6.0.153" = ["simics-api/6.0.153", "simics/6.0.153"]
"6.0.154" = ["simics-api/6.0.154", "simics/6.0.154"]
"6.0.155" = ["simics-api/6.0.155", "simics/6.0.155"]
"6.0.156" = ["simics-api/6.0.156", "simics/6.0.156"]
"6.0.157" = ["simics-api/6.0.157", "simics/6.0.157"]
"6.0.158" = ["simics-api/6.0.158", "simics/6.0.158"]
"6.0.159" = ["simics-api/6.0.159", "simics/6.0.159"]
"6.0.160" = ["simics-api/6.0.160", "simics/6.0.160"]
"6.0.161" = ["simics-api/6.0.161", "simics/6.0.161"]
"6.0.162" = ["simics-api/6.0.162", "simics/6.0.162"]
"6.0.163" = ["simics-api/6.0.163", "simics/6.0.163"]
"6.0.164" = ["simics-api/6.0.164", "simics/6.0.164"]
"6.0.165" = ["simics-api/6.0.165", "simics/6.0.165"]
