# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = "4.3.0"
simics = { workspace = true }

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[features]
"6.0.163" = ["simics/6.0.163", "simics-api/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-api/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-api/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-api/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-api/6.0.167"]
"6.0.168" = ["simics/6.0.168", "simics-api/6.0.168"]
