# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-cli"
categories.workspace = true
description = "Basic SIMICS CLI for testing purposes"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
anyhow.workspace = true
clap = "4.3.0"
simics = { workspace = true }

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[features]
"6.0.163" = ["simics/6.0.163", "simics-api/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-api/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-api/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-api/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-api/6.0.167"]
"6.0.168" = ["simics/6.0.168", "simics-api/6.0.168"]
"6.0.169" = ["simics/6.0.169", "simics-api/6.0.169"]
"6.0.170" = ["simics/6.0.170", "simics-api/6.0.170"]
"6.0.171" = ["simics/6.0.171", "simics-api/6.0.171"]
"6.0.172" = ["simics/6.0.172", "simics-api/6.0.172"]
