[package]
name = "simics-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
artifact-dependency.workspace = true
clap = { version = "4.3.0", features = ["derive", "string"] }
tsffs_module.workspace = true
derive_builder = "0.12.0"
libafl.workspace = true
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { workspace = true, features = ["derive"] }
simics.workspace = true
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
strum_macros = "0.24.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "ansi",
    "json",
    "fmt",
    "std",
    "env-filter",
] }
version-tools.workspace = true
versions = "5.0.0"

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[features]
"6.0.28" = ["simics/6.0.28", "simics-api/6.0.28", "tsffs_module/6.0.28"]
"6.0.31" = ["simics/6.0.31", "simics-api/6.0.31", "tsffs_module/6.0.31"]
"6.0.33" = ["simics/6.0.33", "simics-api/6.0.33", "tsffs_module/6.0.33"]
"6.0.34" = ["simics/6.0.34", "simics-api/6.0.34", "tsffs_module/6.0.34"]
"6.0.35" = ["simics/6.0.35", "simics-api/6.0.35", "tsffs_module/6.0.35"]
"6.0.36" = ["simics/6.0.36", "simics-api/6.0.36", "tsffs_module/6.0.36"]
"6.0.38" = ["simics/6.0.38", "simics-api/6.0.38", "tsffs_module/6.0.38"]
"6.0.39" = ["simics/6.0.39", "simics-api/6.0.39", "tsffs_module/6.0.39"]
"6.0.40" = ["simics/6.0.40", "simics-api/6.0.40", "tsffs_module/6.0.40"]
"6.0.41" = ["simics/6.0.41", "simics-api/6.0.41", "tsffs_module/6.0.41"]
"6.0.42" = ["simics/6.0.42", "simics-api/6.0.42", "tsffs_module/6.0.42"]
"6.0.43" = ["simics/6.0.43", "simics-api/6.0.43", "tsffs_module/6.0.43"]
"6.0.44" = ["simics/6.0.44", "simics-api/6.0.44", "tsffs_module/6.0.44"]
"6.0.45" = ["simics/6.0.45", "simics-api/6.0.45", "tsffs_module/6.0.45"]
"6.0.46" = ["simics/6.0.46", "simics-api/6.0.46", "tsffs_module/6.0.46"]
"6.0.47" = ["simics/6.0.47", "simics-api/6.0.47", "tsffs_module/6.0.47"]
"6.0.48" = ["simics/6.0.48", "simics-api/6.0.48", "tsffs_module/6.0.48"]
"6.0.49" = ["simics/6.0.49", "simics-api/6.0.49", "tsffs_module/6.0.49"]
"6.0.50" = ["simics/6.0.50", "simics-api/6.0.50", "tsffs_module/6.0.50"]
"6.0.51" = ["simics/6.0.51", "simics-api/6.0.51", "tsffs_module/6.0.51"]
"6.0.52" = ["simics/6.0.52", "simics-api/6.0.52", "tsffs_module/6.0.52"]
"6.0.53" = ["simics/6.0.53", "simics-api/6.0.53", "tsffs_module/6.0.53"]
"6.0.54" = ["simics/6.0.54", "simics-api/6.0.54", "tsffs_module/6.0.54"]
"6.0.55" = ["simics/6.0.55", "simics-api/6.0.55", "tsffs_module/6.0.55"]
"6.0.56" = ["simics/6.0.56", "simics-api/6.0.56", "tsffs_module/6.0.56"]
"6.0.57" = ["simics/6.0.57", "simics-api/6.0.57", "tsffs_module/6.0.57"]
"6.0.58" = ["simics/6.0.58", "simics-api/6.0.58", "tsffs_module/6.0.58"]
"6.0.59" = ["simics/6.0.59", "simics-api/6.0.59", "tsffs_module/6.0.59"]
"6.0.60" = ["simics/6.0.60", "simics-api/6.0.60", "tsffs_module/6.0.60"]
"6.0.61" = ["simics/6.0.61", "simics-api/6.0.61", "tsffs_module/6.0.61"]
"6.0.62" = ["simics/6.0.62", "simics-api/6.0.62", "tsffs_module/6.0.62"]
"6.0.63" = ["simics/6.0.63", "simics-api/6.0.63", "tsffs_module/6.0.63"]
"6.0.64" = ["simics/6.0.64", "simics-api/6.0.64", "tsffs_module/6.0.64"]
"6.0.65" = ["simics/6.0.65", "simics-api/6.0.65", "tsffs_module/6.0.65"]
"6.0.66" = ["simics/6.0.66", "simics-api/6.0.66", "tsffs_module/6.0.66"]
"6.0.67" = ["simics/6.0.67", "simics-api/6.0.67", "tsffs_module/6.0.67"]
"6.0.68" = ["simics/6.0.68", "simics-api/6.0.68", "tsffs_module/6.0.68"]
"6.0.69" = ["simics/6.0.69", "simics-api/6.0.69", "tsffs_module/6.0.69"]
"6.0.70" = ["simics/6.0.70", "simics-api/6.0.70", "tsffs_module/6.0.70"]
"6.0.71" = ["simics/6.0.71", "simics-api/6.0.71", "tsffs_module/6.0.71"]
"6.0.72" = ["simics/6.0.72", "simics-api/6.0.72", "tsffs_module/6.0.72"]
"6.0.73" = ["simics/6.0.73", "simics-api/6.0.73", "tsffs_module/6.0.73"]
"6.0.74" = ["simics/6.0.74", "simics-api/6.0.74", "tsffs_module/6.0.74"]
"6.0.75" = ["simics/6.0.75", "simics-api/6.0.75", "tsffs_module/6.0.75"]
"6.0.76" = ["simics/6.0.76", "simics-api/6.0.76", "tsffs_module/6.0.76"]
"6.0.77" = ["simics/6.0.77", "simics-api/6.0.77", "tsffs_module/6.0.77"]
"6.0.78" = ["simics/6.0.78", "simics-api/6.0.78", "tsffs_module/6.0.78"]
"6.0.79" = ["simics/6.0.79", "simics-api/6.0.79", "tsffs_module/6.0.79"]
"6.0.80" = ["simics/6.0.80", "simics-api/6.0.80", "tsffs_module/6.0.80"]
"6.0.81" = ["simics/6.0.81", "simics-api/6.0.81", "tsffs_module/6.0.81"]
"6.0.82" = ["simics/6.0.82", "simics-api/6.0.82", "tsffs_module/6.0.82"]
"6.0.83" = ["simics/6.0.83", "simics-api/6.0.83", "tsffs_module/6.0.83"]
"6.0.84" = ["simics/6.0.84", "simics-api/6.0.84", "tsffs_module/6.0.84"]
"6.0.85" = ["simics/6.0.85", "simics-api/6.0.85", "tsffs_module/6.0.85"]
"6.0.86" = ["simics/6.0.86", "simics-api/6.0.86", "tsffs_module/6.0.86"]
"6.0.87" = ["simics/6.0.87", "simics-api/6.0.87", "tsffs_module/6.0.87"]
"6.0.88" = ["simics/6.0.88", "simics-api/6.0.88", "tsffs_module/6.0.88"]
"6.0.89" = ["simics/6.0.89", "simics-api/6.0.89", "tsffs_module/6.0.89"]
"6.0.90" = ["simics/6.0.90", "simics-api/6.0.90", "tsffs_module/6.0.90"]
"6.0.91" = ["simics/6.0.91", "simics-api/6.0.91", "tsffs_module/6.0.91"]
"6.0.92" = ["simics/6.0.92", "simics-api/6.0.92", "tsffs_module/6.0.92"]
"6.0.93" = ["simics/6.0.93", "simics-api/6.0.93", "tsffs_module/6.0.93"]
"6.0.94" = ["simics/6.0.94", "simics-api/6.0.94", "tsffs_module/6.0.94"]
"6.0.95" = ["simics/6.0.95", "simics-api/6.0.95", "tsffs_module/6.0.95"]
"6.0.96" = ["simics/6.0.96", "simics-api/6.0.96", "tsffs_module/6.0.96"]
"6.0.97" = ["simics/6.0.97", "simics-api/6.0.97", "tsffs_module/6.0.97"]
"6.0.98" = ["simics/6.0.98", "simics-api/6.0.98", "tsffs_module/6.0.98"]
"6.0.99" = ["simics/6.0.99", "simics-api/6.0.99", "tsffs_module/6.0.99"]
"6.0.100" = ["simics/6.0.100", "simics-api/6.0.100", "tsffs_module/6.0.100"]
"6.0.101" = ["simics/6.0.101", "simics-api/6.0.101", "tsffs_module/6.0.101"]
"6.0.102" = ["simics/6.0.102", "simics-api/6.0.102", "tsffs_module/6.0.102"]
"6.0.103" = ["simics/6.0.103", "simics-api/6.0.103", "tsffs_module/6.0.103"]
"6.0.104" = ["simics/6.0.104", "simics-api/6.0.104", "tsffs_module/6.0.104"]
"6.0.105" = ["simics/6.0.105", "simics-api/6.0.105", "tsffs_module/6.0.105"]
"6.0.106" = ["simics/6.0.106", "simics-api/6.0.106", "tsffs_module/6.0.106"]
"6.0.107" = ["simics/6.0.107", "simics-api/6.0.107", "tsffs_module/6.0.107"]
"6.0.108" = ["simics/6.0.108", "simics-api/6.0.108", "tsffs_module/6.0.108"]
"6.0.109" = ["simics/6.0.109", "simics-api/6.0.109", "tsffs_module/6.0.109"]
"6.0.110" = ["simics/6.0.110", "simics-api/6.0.110", "tsffs_module/6.0.110"]
"6.0.111" = ["simics/6.0.111", "simics-api/6.0.111", "tsffs_module/6.0.111"]
"6.0.112" = ["simics/6.0.112", "simics-api/6.0.112", "tsffs_module/6.0.112"]
"6.0.113" = ["simics/6.0.113", "simics-api/6.0.113", "tsffs_module/6.0.113"]
"6.0.114" = ["simics/6.0.114", "simics-api/6.0.114", "tsffs_module/6.0.114"]
"6.0.115" = ["simics/6.0.115", "simics-api/6.0.115", "tsffs_module/6.0.115"]
"6.0.116" = ["simics/6.0.116", "simics-api/6.0.116", "tsffs_module/6.0.116"]
"6.0.117" = ["simics/6.0.117", "simics-api/6.0.117", "tsffs_module/6.0.117"]
"6.0.118" = ["simics/6.0.118", "simics-api/6.0.118", "tsffs_module/6.0.118"]
"6.0.119" = ["simics/6.0.119", "simics-api/6.0.119", "tsffs_module/6.0.119"]
"6.0.120" = ["simics/6.0.120", "simics-api/6.0.120", "tsffs_module/6.0.120"]
"6.0.121" = ["simics/6.0.121", "simics-api/6.0.121", "tsffs_module/6.0.121"]
"6.0.122" = ["simics/6.0.122", "simics-api/6.0.122", "tsffs_module/6.0.122"]
"6.0.123" = ["simics/6.0.123", "simics-api/6.0.123", "tsffs_module/6.0.123"]
"6.0.124" = ["simics/6.0.124", "simics-api/6.0.124", "tsffs_module/6.0.124"]
"6.0.125" = ["simics/6.0.125", "simics-api/6.0.125", "tsffs_module/6.0.125"]
"6.0.126" = ["simics/6.0.126", "simics-api/6.0.126", "tsffs_module/6.0.126"]
"6.0.127" = ["simics/6.0.127", "simics-api/6.0.127", "tsffs_module/6.0.127"]
"6.0.128" = ["simics/6.0.128", "simics-api/6.0.128", "tsffs_module/6.0.128"]
"6.0.129" = ["simics/6.0.129", "simics-api/6.0.129", "tsffs_module/6.0.129"]
"6.0.130" = ["simics/6.0.130", "simics-api/6.0.130", "tsffs_module/6.0.130"]
"6.0.131" = ["simics/6.0.131", "simics-api/6.0.131", "tsffs_module/6.0.131"]
"6.0.132" = ["simics/6.0.132", "simics-api/6.0.132", "tsffs_module/6.0.132"]
"6.0.133" = ["simics/6.0.133", "simics-api/6.0.133", "tsffs_module/6.0.133"]
"6.0.134" = ["simics/6.0.134", "simics-api/6.0.134", "tsffs_module/6.0.134"]
"6.0.135" = ["simics/6.0.135", "simics-api/6.0.135", "tsffs_module/6.0.135"]
"6.0.136" = ["simics/6.0.136", "simics-api/6.0.136", "tsffs_module/6.0.136"]
"6.0.137" = ["simics/6.0.137", "simics-api/6.0.137", "tsffs_module/6.0.137"]
"6.0.138" = ["simics/6.0.138", "simics-api/6.0.138", "tsffs_module/6.0.138"]
"6.0.139" = ["simics/6.0.139", "simics-api/6.0.139", "tsffs_module/6.0.139"]
"6.0.140" = ["simics/6.0.140", "simics-api/6.0.140", "tsffs_module/6.0.140"]
"6.0.141" = ["simics/6.0.141", "simics-api/6.0.141", "tsffs_module/6.0.141"]
"6.0.142" = ["simics/6.0.142", "simics-api/6.0.142", "tsffs_module/6.0.142"]
"6.0.143" = ["simics/6.0.143", "simics-api/6.0.143", "tsffs_module/6.0.143"]
"6.0.144" = ["simics/6.0.144", "simics-api/6.0.144", "tsffs_module/6.0.144"]
"6.0.145" = ["simics/6.0.145", "simics-api/6.0.145", "tsffs_module/6.0.145"]
"6.0.146" = ["simics/6.0.146", "simics-api/6.0.146", "tsffs_module/6.0.146"]
"6.0.147" = ["simics/6.0.147", "simics-api/6.0.147", "tsffs_module/6.0.147"]
"6.0.148" = ["simics/6.0.148", "simics-api/6.0.148", "tsffs_module/6.0.148"]
"6.0.149" = ["simics/6.0.149", "simics-api/6.0.149", "tsffs_module/6.0.149"]
"6.0.150" = ["simics/6.0.150", "simics-api/6.0.150", "tsffs_module/6.0.150"]
"6.0.151" = ["simics/6.0.151", "simics-api/6.0.151", "tsffs_module/6.0.151"]
"6.0.152" = ["simics/6.0.152", "simics-api/6.0.152", "tsffs_module/6.0.152"]
"6.0.153" = ["simics/6.0.153", "simics-api/6.0.153", "tsffs_module/6.0.153"]
"6.0.154" = ["simics/6.0.154", "simics-api/6.0.154", "tsffs_module/6.0.154"]
"6.0.155" = ["simics/6.0.155", "simics-api/6.0.155", "tsffs_module/6.0.155"]
"6.0.156" = ["simics/6.0.156", "simics-api/6.0.156", "tsffs_module/6.0.156"]
"6.0.157" = ["simics/6.0.157", "simics-api/6.0.157", "tsffs_module/6.0.157"]
"6.0.158" = ["simics/6.0.158", "simics-api/6.0.158", "tsffs_module/6.0.158"]
"6.0.159" = ["simics/6.0.159", "simics-api/6.0.159", "tsffs_module/6.0.159"]
"6.0.160" = ["simics/6.0.160", "simics-api/6.0.160", "tsffs_module/6.0.160"]
"6.0.161" = ["simics/6.0.161", "simics-api/6.0.161", "tsffs_module/6.0.161"]
"6.0.162" = ["simics/6.0.162", "simics-api/6.0.162", "tsffs_module/6.0.162"]
"6.0.163" = ["simics/6.0.163", "simics-api/6.0.163", "tsffs_module/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-api/6.0.164", "tsffs_module/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-api/6.0.165", "tsffs_module/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-api/6.0.166", "tsffs_module/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-api/6.0.167", "tsffs_module/6.0.167"]
