[package]
name = "simics-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
artifact-dependency.workspace = true
clap = { version = "4.3.0", features = ["derive", "string"] }
tsffs_module.workspace = true
derive_builder = "0.12.0"
libafl.workspace = true
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { workspace = true, features = ["derive"] }
simics.workspace = true
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
strum_macros = "0.24.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "ansi",
    "json",
    "fmt",
    "std",
    "env-filter",
] }
version-tools.workspace = true
versions = "5.0.0"

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[features]
"6.0.163" = ["simics/6.0.163", "simics-api/6.0.163", "tsffs_module/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-api/6.0.164", "tsffs_module/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-api/6.0.165", "tsffs_module/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-api/6.0.166", "tsffs_module/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-api/6.0.167", "tsffs_module/6.0.167"]
