# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-fuzz"
categories.workspace = true
description = "Target Software Fuzzer for SIMICS Command-Line interface"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
default-run = "simics-fuzz"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
artifact-dependency.workspace = true
clap = { version = "4.3.0", features = ["derive", "string", "wrap_help"] }
tsffs_module.workspace = true
derive_builder = "0.12.0"
libafl.workspace = true
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.15"
serde = { workspace = true, features = ["derive"] }
simics.workspace = true
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
strum_macros = "0.25.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "ansi",
    "json",
    "fmt",
    "std",
    "env-filter",
] }
version-tools.workspace = true
versions = "5.0.0"
libafl_bolts.workspace = true
goblin = "0.7.1"

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[features]
"6.0.163" = ["simics/6.0.163", "simics-api/6.0.163", "tsffs_module/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-api/6.0.164", "tsffs_module/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-api/6.0.165", "tsffs_module/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-api/6.0.166", "tsffs_module/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-api/6.0.167", "tsffs_module/6.0.167"]
"6.0.168" = ["simics/6.0.168", "simics-api/6.0.168", "tsffs_module/6.0.168"]
"6.0.169" = ["simics/6.0.169", "simics-api/6.0.169", "tsffs_module/6.0.169"]
"6.0.170" = ["simics/6.0.170", "simics-api/6.0.170", "tsffs_module/6.0.170"]
"6.0.171" = ["simics/6.0.171", "simics-api/6.0.171", "tsffs_module/6.0.171"]
"6.0.172" = ["simics/6.0.172", "simics-api/6.0.172", "tsffs_module/6.0.172"]