[package]
name = "simics-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy_macro = "0.15.7"
itertools = "0.10.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
regex = "1.8.4"
serde = { version = "1.0.163", features = ["derive"] }
version-tools.workspace = true
versions = "5.0.0"
walkdir = "2.3.3"
