# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-link"
categories.workspace = true
description = "Link helpers for build.rs scripts to link SIMICS"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
derive_builder = "0.12.0"
dotenvy_macro = "0.15.7"
itertools = "0.11.0"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.8.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
version-tools.workspace = true
versions = "5.0.0"
walkdir = "2.3.3"
